fix(ui): remove z-index on focus helper to avoid sticky issues

--- a/ui/src/css/q-calendar.sass
+++ b/ui/src/css/q-calendar.sass
@@ -119,7 +119,6 @@
     border-radius: inherit
     opacity: 0
     transition: background-color .3s cubic-bezier(.25,.8,.5,1), opacity .4s cubic-bezier(.25,.8,.5,1)
-    z-index: 1
 
     &:before, &:after
       content: ''
